frontend/src/App.css
body {
  font-family: 'Yatra One', sans-serif;
}

:root {
  --accent-color: #800909;
  --bg-color: #feeded;
  --accent2-color: #fed3d3;
  --accent-hover: #ffbdbd;
}

/************************************************************/
/************************* GENERAL **************************/
/************************************************************/

html, body {
  margin: 0;    /* remove default margin and padding*/
  padding: 0;
  overflow: hidden;   /* prevents scrollbar */
  background-color: var(--bg-color); /* Makes sure background is consistent dependent of browser or darkmode */
  color: var(--accent-color);   
}

/* Sets relative size for interior containers */
html, body, #root, .App, .flex-container {
  height: 100%;
  width: 100%;
}

/***********************************************************/
/********************* MAIN CONTAINER **********************/
/***********************************************************/

/* Contains the 3 columns (options, original image, processed image) */
.flex-container {
  display: flex;
  justify-content: space-between;
  gap: 20px; /* Sets minimum gap */
  box-sizing: border-box; /* ensures padding is included in the height */
  padding: 20px;
}

/***********************************************************/
/********************* OPTIONS COLUMN **********************/
/***********************************************************/

/* General optains container */
.options-column {
  display: flex;
  flex-direction: column;
  flex: 0 0 20%;    /* Sets width of options column */
}


/* Title image */
.title-img {
  padding-bottom: 30px;
}

/***********************************************************/
/******************* DROP ZONE CONTAINER *******************/
/***********************************************************/

/* Container for drop zone */
.upload-container {
  margin-bottom: 10px;
  width: 100%;
}

/* Drag and drop area */
.drop-zone {
  width: 100%;           
  height: 130px;             /* Set drop zone height */
  padding: 20px;            /* Better align inside text */
  border: 2px dashed var(--accent-color);
  border-radius: 12px;
  background-color: var(--accent2-color);
  text-align: center;
  color: var(--accent-color);
  transition: background-color 0.2s ease;
  display: flex;          /* Center text */
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

/* Styling when hovering over drop zone */
.drop-zone:hover {
  background-color: var(--accent-hover);
  cursor: pointer;
}

/***********************************************************/
/******************** SLIDER CONTAINER *********************/
/***********************************************************/

/* Container with all sliders */
.all-sliders-container{
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  width: 100%;
  height: 100%;
  margin-bottom: 10px;
}

/* Slider text */
.slider-label {
  font-size: 26px;
  font-weight: 500;
  margin-bottom: 4px;
}

/* General slider */
.slider-container input[type="range"]{
  appearance: none;
  width: 100%;
  background: transparent;
}

/* Slider track */
.slider-container input[type="range"]::-webkit-slider-runnable-track{
  height: 35px;
  background: var(--accent2-color);
  border-radius: 100px;
  box-shadow: 0 0 10px var(--accent2-color);
  border: 1px solid var(--accent-color); 
}

/* Slider thumb */
.slider-container input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 35px;
  width: 35px;
  border-radius: 100%;
  background: var(--accent-color);
  box-shadow: 0 0 10px var(--accent-color);
  margin-top: 0px;
  transition: box-shadow 0.3s ease;
}

/* Styling when hovering over slider thumb */
.slider-container input[type="range"]:hover::-webkit-slider-thumb {
  box-shadow: 0 0 30px var(--accent-color);
}

/***********************************************************/
/******************* BUTTON CONTAINER ********************/
/***********************************************************/

/* General container with download button and erase button */
.button-container {
  text-align: center; 
  display: flex;
  gap: 20px;
}

/* Download button itself */
.download-button {
  width: 50%;
  display: inline-block;
  padding: 10px 0px 10px 0px; /* padding: top right bottom left */
  background-color: var(--accent2-color);
  color: var(--accent-color);      
  font-size: 16px; 
  border-radius: 10px;   /* Rounded corners */
  border: 1px solid var(--accent-color); 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Add shadow */
  transition: background-color 0.3s, transform 0.3s;  /* Smooth transition for hover effects */
}

/* Styling when hovering over download button */
.download-button:hover {
  background-color: var(--accent-hover);
  transform: scale(1.05);      /* Slightly scale up button size on hover */
  color: var(--accent-color);
}

/* Styling when no image has been uploaded */
.download-button.disabled {
  background-color: #ccc;
  cursor: not-allowed;
  pointer-events: none;
}

/* Erase button itself */
.erase-button {
  width: 50%;
  display: inline-block;
  padding: 10px 0px 10px 0px; /* padding: top right bottom left */
  background-color: #fdd7d7;
  color: #7d0000;      
  font-size: 16px; 
  border-radius: 10px;   /* Rounded corners */
  border: 1px solid #7d0000; 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Add shadow */
  transition: background-color 0.3s, transform 0.3s;  /* Smooth transition for hover effects */
}

/* Styling when hovering over erase button */
.erase-button:hover {
  background-color: #ffbdbd;
  transform: scale(1.05);      /* Slightly scale up button size on hover */
  color: #7d0000;
}

/***********************************************************/
/********************** IMAGE COLUMN ***********************/
/***********************************************************/

/* Container for each image column */
.image-column {
  display: flex;
  flex: 0 0 38%; /* Sets width of image column */
  flex-direction: column;
  align-items: center;
}

/* Orignal text */
.original-label-img {
  height: 40px;
  margin-bottom: 10px;
}

/* Cartoonized text */
.cartoonized-label-img {
  height: 46px;
  margin-bottom: 4px;
}

/* Image box where image is located */
.image-box {
  height: 100%;
  width: 100%;
  display:flex;                   /* Center image */
  justify-content: center;
  max-height: 92%;                /* Prevent image from overflowing at the bottom */
  border: 3px solid var(--accent-color); 
  border-radius: 12px; 
  background-color: #e3e3e3;
  background-image:                       /* Background checker pattern */
    linear-gradient(45deg, #ccc 25%, transparent 25%),
    linear-gradient(-45deg, #ccc 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, #ccc 75%),
    linear-gradient(-45deg, transparent 75%, #ccc 75%);
  background-size: 20px 20px;                                 /* Tile Size */
  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;    /* Offset for tiles to line up propery */
}

/* Limit size of actual image */
img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
  border-radius: 8px;
}

